# benchmark-maps

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  main.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  main.yml  run-benchmark.yml
binder/: Dockerfile  apt.txt  environment.yml
carbonplan_benchmarks/: __init__.py  utils.py
carbonplan_benchmarks/analysis/: __init__.py  parsing.py  plotting.py  processing.py
carbonplan_benchmarks/playwright/: cli.py  run.py
carbonplan_benchmarks/tests/: test_entrypoint.py  test_gpu.py  test_utils.py
chrome-devtools-traces/frames/: 2023-07-26T19-11-35-1.json
data/: baselines.json  data-2023-06-06T02-02-43.json  data-2023-06-06T02-03-26.json  data-2023-06-06T02-14-28.json  data-2023-06-07T17-14-37.json  data-2023-06-15T21-55-25.json  data-2023-06-15T22-20-40.json  data-2023-06-16T23-13-17.json  data-2023-06-16T23-23-30.json  data-2023-06-16T23-29-37.json  data-2023-06-21T16-28-43.json  data-2023-06-21T16-44-16.json  data-2023-06-21T17-37-37.json  data-2023-06-22T16-22-08.json  data-2023-07-26T19-11-35.json  data.json
envs/: environment.yml
notebooks/: 01_cmip6_netcdf_to_zarr.ipynb  02_zarr_to_pyramids.ipynb  03_pyramids_to_zarr_v3.ipynb  04_pyramids_to_paths.ipynb  05_process_results.ipynb  benchmarks.ipynb  utils.py
scripts/: analysis.py
stores/: 01_cmip6_netcdf_to_zarr.ipynb  01a_cmip6_cog_to_zarr.ipynb  01a_cmip6_to_zarr.ipynb  01b_cmip6_netcdf_to_zarr.ipynb  02_zarr_to_pyramids.ipynb  03_pyramids_to_zarr_v3.ipynb  04_pyramids_to_paths.ipynb  environment.yml  utils.py
tests/: test_gpu.py
