[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"


[project]
name = "carbonplan_benchmarks"
description = "CarbonPlan benchmarking utilities"
readme = "README.md"
license = {text = "Apache"}
authors = [{name = "CarbonPlan", email = "tech@carbonplan.org"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas",
    "fsspec",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/carbonplan/benchmark-maps"

[project.scripts]
carbonplan_benchmarks = "carbonplan_benchmarks.playwright.cli:main"

[tool.setuptools.packages.find]
include = ["carbonplan_benchmarks*"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "no-guess-dev"
fallback_version = "999"

[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = true


[tool.ruff]
line-length = 100
target-version = "py310"
builtins = ["ellipsis"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = ["E402", "E501", "E731"]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]


[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.isort]
known-first-party = []
